# RAMBO

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION-CLEANUP-ACTION-PLAN.md  FINDINGS-SMB-BLANK-SCREEN.md  GEMINI.md  OPCODE_STATUS_REPORT.md  QUICK-START.md  README.md  SMB1_NMI_FIX_REPORT.md  TEST-RESTORATION-IMMEDIATE-ACTIONS.md  TEST_VERIFICATION_REPORT.md  build.zig  build.zig.zon  debug_trace.zig  ppu_diagnosis.txt  rambo.kdl  rom_analysis.txt  smb_boot_analysis.md  test_accuracycoin_debug.sh  test_compile  test_output.txt
.claude/: settings.json
compiler/: README.md  pyproject.toml
compiler/docs/: microsoft-basic-port-plan.md
compiler/src/compiler/: __init__.py  basic_analysis.py  cli.py  toolchain.py
docs/: API-AUDIT-REPORT-2025-10-20.md  APU-GAP-ANALYSIS-2025-10-06-UPDATED.md  APU-IMPLEMENTATION-DECISION.md  APU-UNIFIED-IMPLEMENTATION-PLAN.md  AUDIT-COMPLETION-SUMMARY.md  CODE-REVIEW-REMEDIATION-PLAN.md  CODEBASE-AUDIT-2025-10-06.md  COMPLETE-ARCHITECTURE-AND-PLAN.md  CURRENT-ISSUES.md  CURRENT-STATUS.md  DEBUGGER-API-AUDIT.md  DEBUGGER-ARCHITECTURE-FIXES.md  DEBUGGER-STATUS.md  DEBUGGER-TAS-GUIDE.md  DEVELOPMENT-PLAN-2025-10-04.md  DEVELOPMENT-PLAN.md  DEVELOPMENT-ROADMAP.md  DOCUMENTATION-AUDIT-2025-10-08.md  DOCUMENTATION-AUDIT-FINAL-REPORT-2025-10-11.md  DOCUMENTATION-REORGANIZATION-2025-10-17.md  DOCUMENTATION-REORGANIZATION-ASSESSMENT-2025-10-07.md  DOCUMENTATION-STATUS-2025-10-06.md  DOCUMENTATION-SUMMARY-2025-10-04.md  DOCUMENTATION-UPDATE-PLAN-2025-10-06.md  FAILING_GAMES_INVESTIGATION.md  GRAPHVIZ-AUDIT-SUMMARY-2025-10-11.md  (+33 more)
(+951 files in other folders)
