[project]
name = "compiler"
version = "0.1.0"
description = "Build helpers for assembling reference NES ROMs"
readme = "README.md"
authors = [
    { name = "RAMJAC", email = "colin@RAMJAC.digital" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.19.2",
]

[project.scripts]
compiler = "compiler:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
